@@ -686,7 +686,7 @@ Header relocateFileList(const rpmts ts, rpmfi fi,
 {
     HGE_t hge = headerGetExtension;
     HAE_t hae = headerAddExtension;
-    HME_t hme = (HME_t) headerModifyEntry;
+    HME_t hme = headerModifyExtension;
     HE_t he = memset(alloca(sizeof(*he)), 0, sizeof(*he));
     rpmte p = rpmtsRelocateElement(ts);
     static int _printed = 0;
@@ -1121,7 +1121,7 @@ dColors[j] |= fColors[i];
 	he->t = RPM_STRING_ARRAY_TYPE;
 	he->p.argv = baseNames;
 	he->c = fileCount;
-	xx = hme(h, he->tag, he->t, he->p.ptr, he->c);
+	xx = hme(h, he, 0);
 	fi->bnl = _free(fi->bnl);
 	xx = hge(h, he, 0);
 	fi->bnl = he->p.argv;
@@ -1131,7 +1131,7 @@ dColors[j] |= fColors[i];
 	he->t = RPM_STRING_ARRAY_TYPE;
 	he->p.argv = dirNames;
 	he->c = dirCount;
-	xx = hme(h, he->tag, he->t, he->p.ptr, he->c);
+	xx = hme(h, he, 0);
 	fi->dnl = _free(fi->dnl);
 	xx = hge(h, he, 0);
 	fi->dnl = he->p.argv;
@@ -1141,7 +1141,7 @@ dColors[j] |= fColors[i];
 	he->t = RPM_UINT32_TYPE;
 	he->p.ui32p = dirIndexes;
 	he->c = fileCount;
-	xx = hme(h, he->tag, he->t, he->p.ptr, he->c);
+	xx = hme(h, he, 0);
 	fi->dil = _free(fi->dil);
 	xx = hge(h, he, 0);
 	fi->dil = he->p.ui32p;
